test/classes/dinan/circular_init_broken2.good
circular_init_broken2.chpl:2: error: 'b' used before defined (first used here)
